# CmakeIDL

./: .gitignore  CMakeLists.txt
src/: BlankUserControl.cpp  BlankUserControl.h  BlankUserControl.idl  BlankUserControl.xaml  Class.cpp  Class.h  Class.idl  pch.h
